--- a/dev/system/auth_server/Cargo.toml
+++ b/dev/system/auth_server/Cargo.toml
@@ -8,9 +8,8 @@ edition = "2021"
 meower_core = { version = "0.1.0", path = "../core" }
 meower_entity = { version = "0.1.0", path = "../datastore/entity" }
 askama = "0.12.1"
-axum = "0.6.20"
-axum-extra = { version = "0.8.0", features = ["cookie"] }
-hyper = { version = "0.14.27", features = ["client"] }
+axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["cookie"] }
 serde = "1.0.192"
 tokio = { version = "1.34.0", features = ["full"] }
 tower = "0.4.13"
@@ -19,3 +18,5 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 accept-language = "3.1.0"
+hyper = { version = "1.0.1", features = ["full"] }
+hyper-util = { version = "0.1.1", features = ["client-legacy"] }
