--- a/dev/system/service/frontend/Cargo.toml
+++ b/dev/system/service/frontend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 
 [dependencies]
+meower_api_schema = { version = "0.1.0", path = "../api_schema" }
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 log = "0.4.17"
