--- a/dev/.env.example
+++ b/dev/.env.example
@@ -6,9 +6,10 @@
 CONFIG_PATH=/system/config
 
 # Ports
-FRONTEND_PORT=9000
-BACKEND_PORT=9001
-AUTH_SERVER_PORT=8080
+BALANCER_PORT=8080
+AUTH_SERVER_PORT=9000
+FRONTEND_PORT=9001
+BACKEND_PORT=9002
 POSTGRES_PORT=5432
 MAILHOG_PORT=8025
 SMTP_PORT=1025
