--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -18,6 +18,45 @@ services:
     tty: true
 
   ##############################################################################
+  # Load balancer
+  ##############################################################################
+  balancer:
+    container_name: meower_balancer
+    build:
+      context: .
+      dockerfile: ./docker/service/balancer/Dockerfile
+    ports:
+      - ${BALANCER_PORT}:8080
+    volumes:
+      - ./docker/service/balancer/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - auth-server
+
+  ##############################################################################
+  # Authentication server
+  ##############################################################################
+  auth-server:
+    container_name: meower_auth_server
+    build:
+      context: .
+      dockerfile: ./docker/service/auth_server/Dockerfile
+    ports:
+      - ${AUTH_SERVER_PORT}:80
+    volumes:
+      - ./system/assets:/system/assets
+      - ./system/config:/system/config
+      - ./system/auth_server:/system/auth_server
+      - ./system/core:/system/core
+      - ./system/datastore:/system/datastore
+    env_file: .env
+    working_dir: /system/auth_server
+    command: "cargo watch -x run"
+    depends_on:
+      - postgres
+      - frontend
+    tty: true
+
+  ##############################################################################
   # Front-end application
   ##############################################################################
   frontend:
@@ -26,7 +65,7 @@ services:
       context: .
       dockerfile: ./docker/service/frontend/Dockerfile
     ports:
-      - ${FRONTEND_PORT}:9000
+      - ${FRONTEND_PORT}:9001
     volumes:
       - ./system/assets:/system/assets
       - ./system/config:/system/config
@@ -49,7 +88,7 @@ services:
       context: .
       dockerfile: ./docker/service/backend/Dockerfile
     ports:
-      - ${BACKEND_PORT}:9001
+      - ${BACKEND_PORT}:9002
     volumes:
       - ./system/assets:/system/assets
       - ./system/config:/system/config
@@ -62,30 +101,6 @@ services:
     command: "cargo watch -x run"
     depends_on:
       - postgres
-    tty: true
-
-  ##############################################################################
-  # Authentication server
-  ##############################################################################
-  auth-server:
-    container_name: meower_auth_server
-    build:
-      context: .
-      dockerfile: ./docker/service/auth_server/Dockerfile
-    ports:
-      - ${AUTH_SERVER_PORT}:8080
-    volumes:
-      - ./system/assets:/system/assets
-      - ./system/config:/system/config
-      - ./system/auth_server:/system/auth_server
-      - ./system/core:/system/core
-      - ./system/datastore:/system/datastore
-    env_file: .env
-    working_dir: /system/auth_server
-    command: "cargo watch -x run"
-    depends_on:
-      - postgres
-      - frontend
     tty: true
 
   ##############################################################################
