--- a/dev/.env.example
+++ b/dev/.env.example
@@ -7,7 +7,7 @@ CONFIG_PATH=/system/config
 
 # Ports
 BALANCER_PORT=8080
-AUTH_SERVER_PORT=9000
+ENTRANCE_PORT=9000
 FRONTEND_PORT=9001
 BACKEND_PORT=9002
 POSTGRES_PORT=5432
