--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -30,26 +30,26 @@ services:
     volumes:
       - ./docker/service/balancer/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - auth-server
+      - entrance
 
   ##############################################################################
-  # Authentication server
+  # Entrance server
   ##############################################################################
-  auth-server:
-    container_name: meower_auth_server
+  entrance:
+    container_name: meower_entrance
     build:
       context: .
-      dockerfile: ./docker/service/auth_server/Dockerfile
+      dockerfile: ./docker/service/entrance/Dockerfile
     ports:
-      - ${AUTH_SERVER_PORT}:80
+      - ${entrance_PORT}:9000
     volumes:
       - ./system/assets:/system/assets
       - ./system/config:/system/config
-      - ./system/auth_server:/system/auth_server
+      - ./system/entrance:/system/entrance
       - ./system/core:/system/core
       - ./system/datastore:/system/datastore
     env_file: .env
-    working_dir: /system/auth_server
+    working_dir: /system/entrance
     command: "cargo watch -x run"
     depends_on:
       - postgres
@@ -157,6 +157,9 @@ services:
     tty: true
 
 
+################################################################################
+# Volumes
+################################################################################
 volumes:
   pg-data:
   mailhog-data:
