--- a/dev/docker/service/balancer/nginx.conf
+++ b/dev/docker/service/balancer/nginx.conf
@@ -3,6 +3,9 @@ events {
 }
 
 http {
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
+
 	upstream balancer.local {
 		server entrance:9000;
 	}
