feat: Distribute the entrance server

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -7,12 +7,18 @@ CONFIG_PATH=/system/config
 
 # Ports
 BALANCER_PORT=8080
-ENTRANCE_PORT=9000
-FRONTEND_PORT=9001
-BACKEND_PORT=9002
+ENTRANCE1_PORT=9000
+ENTRANCE2_PORT=9001
+FRONTEND1_PORT=9100
+FRONTEND2_PORT=9101
+BACKEND_PORT=9200
 POSTGRES_PORT=5432
 MAILHOG_PORT=8025
 SMTP_PORT=1025
+
+# URLs
+FRONTEND1_URL=http://frontend1:${FRONTEND1_PORT}
+FRONTEND2_URL=http://frontend2:${FRONTEND2_PORT}
 
 
 ################################################################################
