--- a/dev/docker/service/balancer/nginx.conf
+++ b/dev/docker/service/balancer/nginx.conf
@@ -7,7 +7,8 @@ http {
 	error_log /var/log/nginx/error.log;
 
 	upstream balancer.local {
-		server entrance:9000;
+		server entrance1:9000;
+		server entrance2:9001;
 	}
  
 	server {
