feat: Distribute the backend server

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -11,7 +11,8 @@ ENTRANCE1_PORT=9000
 ENTRANCE2_PORT=9001
 FRONTEND1_PORT=9100
 FRONTEND2_PORT=9101
-BACKEND_PORT=9200
+BACKEND1_PORT=9200
+BACKEND2_PORT=9201
 POSTGRES_PORT=5432
 MAILHOG_PORT=8025
 SMTP_PORT=1025
