--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     depends_on:
       - entrance1
       - entrance2
+      - backend1
+      - backend2
 
   ##############################################################################
   # Entrance server
@@ -57,7 +59,6 @@ services:
     command: "cargo watch -x run"
     depends_on:
       - postgres
-      - frontend1
     tty: true
 
   entrance2:
@@ -81,7 +82,6 @@ services:
     command: "cargo watch -x run"
     depends_on:
       - postgres
-      - frontend2
     tty: true
 
   ##############################################################################
@@ -103,8 +103,6 @@ services:
     env_file: .env
     working_dir: /system/service/frontend
     command: "trunk serve --address 0.0.0.0 --release --port ${FRONTEND1_PORT}"
-    depends_on:
-      - backend
     tty: true
 
   frontend2:
@@ -123,20 +121,18 @@ services:
     env_file: .env
     working_dir: /system/service/frontend
     command: "trunk serve --address 0.0.0.0 --release --port ${FRONTEND2_PORT}"
-    depends_on:
-      - backend
     tty: true
 
   ##############################################################################
   # Back-end application
   ##############################################################################
-  backend:
-    container_name: meower_backend
+  backend1:
+    container_name: meower_backend1
     build:
       context: .
       dockerfile: ./docker/service/backend/Dockerfile
     ports:
-      - ${BACKEND_PORT}:9002
+      - ${BACKEND1_PORT}:9200
     volumes:
       - ./system/assets:/system/assets
       - ./system/config:/system/config
@@ -145,11 +141,37 @@ services:
       - ./system/service/backend:/system/service/backend
       - ./system/datastore:/system/datastore
     env_file: .env
+    environment:
+      BACKEND_PORT: ${BACKEND1_PORT}
     working_dir: /system/service/backend
     command: "cargo watch -x run"
     depends_on:
       - postgres
     tty: true
+
+  backend2:
+    container_name: meower_backend2
+    build:
+      context: .
+      dockerfile: ./docker/service/backend/Dockerfile
+    ports:
+      - ${BACKEND2_PORT}:9201
+    volumes:
+      - ./system/assets:/system/assets
+      - ./system/config:/system/config
+      - ./system/core:/system/core
+      - ./system/service/api_schema:/system/service/api_schema
+      - ./system/service/backend:/system/service/backend
+      - ./system/datastore:/system/datastore
+    env_file: .env
+    environment:
+      BACKEND_PORT: ${BACKEND2_PORT}
+    working_dir: /system/service/backend
+    command: "cargo watch -x run"
+    depends_on:
+      - postgres
+    tty: true
+
 
   ##############################################################################
   # PostgreSQL database
