--- a/dev/docker/service/balancer/nginx.conf
+++ b/dev/docker/service/balancer/nginx.conf
@@ -6,15 +6,25 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	upstream balancer.local {
+	upstream entrance.local {
 		server entrance1:9000;
 		server entrance2:9001;
 	}
- 
+
+ 	upstream api.local {
+		server backend1:9100;
+		server backend2:9101;
+	}
+
 	server {
 		listen 8080;
+
 		location / {
-			proxy_pass http://balancer.local;
+			proxy_pass http://entrance.local;
+		}
+
+		location /api/ {
+			proxy_pass http://api.local;
 		}
 	}
 }
