--- a/dev/docker/service/balancer/nginx.conf
+++ b/dev/docker/service/balancer/nginx.conf
@@ -12,8 +12,8 @@ http {
 	}
 
  	upstream api.local {
-		server backend1:9100;
-		server backend2:9101;
+		server backend1:9200;
+		server backend2:9201;
 	}
 
 	server {
@@ -23,7 +23,8 @@ http {
 			proxy_pass http://entrance.local;
 		}
 
-		location /api/ {
+		location /api {
+			rewrite ^/api/(.*)$ /$1 break;
 			proxy_pass http://api.local;
 		}
 	}
