feat: Add migration module

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -10,6 +10,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=meower
 POSTGRES_USER=meower
 POSTGRES_PASSWORD=meower
+DATABASE_URL=postgres://meower:meower@postgres/meower?sslmode=disable
 
 
 ################################################################################
