--- a/dev/system/auth/Cargo.toml
+++ b/dev/system/auth/Cargo.toml
@@ -10,3 +10,10 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["cookie"] }
+sea-orm = { version = "0.12.6", features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres"
+]}
+tokio = { version = "1.34.0", features = ["full"] }
