feat: Add login page

--- a/dev/docker/system/balancer/nginx.conf
+++ b/dev/docker/system/balancer/nginx.conf
@@ -6,26 +6,15 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	upstream entrance.local {
-		server entrance1:9000;
-		server entrance2:9001;
-	}
-
- 	upstream api.local {
-		server backend1:9200;
-		server backend2:9201;
+	upstream auth.local {
+		server auth_layer:9000;
 	}
 
 	server {
 		listen 8080;
 
 		location / {
-			proxy_pass http://entrance.local;
-		}
-
-		location /api {
-			rewrite ^/api/(.*)$ /$1 break;
-			proxy_pass http://api.local;
+			proxy_pass http://auth.local;
 		}
 	}
 }
