--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -22,18 +22,26 @@ services:
       - ${BALANCER_PORT}:8080
     volumes:
       - ./docker/system/balancer/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - auth_layer
 
   # Authentication
-  auth:
+  auth_layer:
     container_name: meower_auth
+    ports:
+      - ${AUTH_LAYER_PORT}:9000
     build:
       context: .
       dockerfile: ./docker/system/auth/Dockerfile
     volumes:
-      - ./system/auth:/system/auth
+      - ./system/layer/auth:/system/layer/auth
+      - ./system/database/entity:/system/database/entity
+      - ./system/util:/system/util
     environment:
+      PORT: 9000
       DATABASE_URL: ${DATABASE_URL}
-    working_dir: /system/auth
+      FALLBACK_LOCALE: en
+    working_dir: /system/layer/auth
     command: "cargo watch -x run"
     depends_on:
       - postgres
