feat: Implement login page

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -2,6 +2,9 @@
 # System
 ################################################################################
 
+# Debug mode
+DEBUG_MODE=true
+
 # Load balancer
 BALANCER_PORT=8080
 
@@ -14,6 +17,12 @@ POSTGRES_DB=meower
 POSTGRES_USER=meower
 POSTGRES_PASSWORD=meower
 DATABASE_URL=postgres://meower:meower@postgres/meower?sslmode=disable
+
+# JWT
+JWT_ISSUE=meower
+JWT_AUDIENCE=meower
+JWT_EXPIRATION_MINUTES=60
+JWT_SECRET=secret
 
 
 ################################################################################
