--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -38,9 +38,14 @@ services:
       - ./system/database/entity:/system/database/entity
       - ./system/util:/system/util
     environment:
+      DEBUG_MODE: ${DEBUG_MODE}
       PORT: 9000
       DATABASE_URL: ${DATABASE_URL}
       FALLBACK_LOCALE: en
+      JWT_ISSUE: ${JWT_ISSUE}
+      JWT_AUDIENCE: ${JWT_AUDIENCE}
+      JWT_EXPIRATION_MINUTES: ${JWT_EXPIRATION_MINUTES}
+      JWT_SECRET: ${JWT_SECRET}
     working_dir: /system/layer/auth
     command: "cargo watch -x run"
     depends_on:
