--- a/dev/system/layer/auth/Cargo.toml
+++ b/dev/system/layer/auth/Cargo.toml
@@ -11,10 +11,13 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 meower_entity = { version = "0.1.0", path = "../../database/entity" }
+meower_type = { version = "0.1.0", path = "../../util/type" }
 accept-language = "3.1.0"
 askama = "0.12.1"
 axum = "0.7.2"
 axum-extra = { version = "0.9.0", features = ["cookie"] }
+chrono = "0.4.31"
+jsonwebtoken = "9.1.0"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
@@ -22,3 +25,4 @@ sea-orm = { version = "0.12.6", features = [
 serde = "1.0.192"
 tokio = { version = "1.34.0", features = ["full"] }
 rust-i18n = "2.3.0"
+time = "0.3.31"
