--- a/dev/system/database/entity/Cargo.toml
+++ b/dev/system/database/entity/Cargo.toml
@@ -17,4 +17,5 @@ chrono = "0.4.31"
 rand = "0.8.5"
 sea-orm = { version = "0.12.6" }
 sea-query = "0.30.3"
+rust-i18n = "2.3.0"
 thiserror = "1.0.51"
