feat: Add email sending dependency

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -24,6 +24,14 @@ JWT_AUDIENCE=meower
 JWT_EXPIRATION_MINUTES=60
 JWT_SECRET=secret
 
+# Email
+SYSTEM_EMAIL_ADDRESS=Meower <system@meower.com>
+SMTP_TLS=false
+SMTP_HOST=mailhog
+SMTP_PORT=1025
+SMTP_USER=meower
+SMTP_PASSWORD=meower
+
 
 ################################################################################
 # Development tools
