--- a/dev/system/layer/auth/Cargo.toml
+++ b/dev/system/layer/auth/Cargo.toml
@@ -18,6 +18,12 @@ axum = "0.7.2"
 axum-extra = { version = "0.9.0", features = ["cookie"] }
 chrono = "0.4.31"
 jsonwebtoken = "9.1.0"
+lettre = { version = "0.11.2", features = [
+    "builder",
+    "tokio1",
+    "tokio1-native-tls",
+    "smtp-transport",
+]}
 rust-i18n = "2.3.0"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
