feat: Implement password reset flow

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -2,6 +2,9 @@
 # System
 ################################################################################
 
+# System URL
+SYSTEM_URL=http://localhost:8080
+
 # Debug mode
 DEBUG_MODE=true
 
