feat: Implement proxy from auth server to SPA

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -1,18 +1,17 @@
 ################################################################################
-# System
+# Containers
 ################################################################################
-
-# System URL
-SYSTEM_URL=http://localhost:8080
-
-# Debug mode
-DEBUG_MODE=true
 
 # Load balancer
 BALANCER_PORT=8080
 
 # Auth layer
-AUTH_LAYER_PORT=9000
+SPA_AUTH_LAYER_PORT=9000
+API_AUTH_LAYER_PORT=9001
+
+# SPA
+SPA_PORT=9100
+SPA_URL=http://spa:${SPA_PORT}
 
 # Postgres
 POSTGRES_PORT=5432
@@ -20,6 +19,17 @@ POSTGRES_DB=meower
 POSTGRES_USER=meower
 POSTGRES_PASSWORD=meower
 DATABASE_URL=postgres://meower:meower@postgres/meower?sslmode=disable
+
+
+################################################################################
+# Application settings
+################################################################################
+
+# Debug mode
+DEBUG_MODE=true
+
+# System URL
+SYSTEM_URL=http://localhost:${BALANCER_PORT}
 
 # JWT
 JWT_ISSUE=meower
@@ -46,5 +56,5 @@ MAILHOG_SMTP_PORT=1025
 
 # tbls
 TBLS_OUTPUT_PATH=../spec
-TBLS_DSN=postgres://meower:meower@postgres/meower?sslmode=disable
+TBLS_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
 TBLS_DOC_PATH=databasedesign
