--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -23,13 +23,13 @@ services:
     volumes:
       - ./docker/system/balancer/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - auth_layer
+      - spa_auth_layer
 
   # Authentication
-  auth_layer:
-    container_name: meower_auth
+  spa_auth_layer:
+    container_name: meower_spa_auth_layer
     ports:
-      - ${AUTH_LAYER_PORT}:9000
+      - ${SPA_AUTH_LAYER_PORT}:9000
     build:
       context: .
       dockerfile: ./docker/system/auth/Dockerfile
@@ -53,10 +53,23 @@ services:
       SMTP_PORT: ${SMTP_PORT}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
+      PROXY_URL: ${SPA_URL}
     working_dir: /system/layer/auth
     command: "cargo watch -x run"
     depends_on:
       - postgres
+    tty: true
+
+  # SPA
+  spa:
+    container_name: meower_spa
+    build:
+      context: .
+      dockerfile: ./docker/system/spa/Dockerfile
+    volumes:
+      - ./system/service/spa:/system/service/spa
+    working_dir: /system/service/spa
+    command: "trunk serve --address 0.0.0.0 --release --port ${SPA_PORT}"
     tty: true
 
   # Postgres
