--- a/dev/docker/system/balancer/nginx.conf
+++ b/dev/docker/system/balancer/nginx.conf
@@ -7,7 +7,7 @@ http {
 	error_log /var/log/nginx/error.log;
 
 	upstream auth.local {
-		server auth_layer:9000;
+		server spa_auth_layer:9000;
 	}
 
 	server {
