--- a/dev/system/layer/auth/Cargo.toml
+++ b/dev/system/layer/auth/Cargo.toml
@@ -32,5 +32,6 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 serde = "1.0.192"
+serde_json = "1.0.108"
 time = "0.3.31"
 tokio = { version = "1.34.0", features = ["full"] }
