--- a/dev/system/service/spa/Cargo.toml
+++ b/dev/system/service/spa/Cargo.toml
@@ -14,7 +14,12 @@ console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 log = "0.4.17"
 reqwest = "0.11.22"
+rust-i18n = "2.3.0"
 sycamore = { version = "0.8.2", features = ["suspense"] }
 sycamore-router = "0.8.0"
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.39"
+web-sys = { version = "0.3.66", features = [
+    "Window",
+    "Navigator",
+]}
