--- a/dev/system/service/spa/Cargo.toml
+++ b/dev/system/service/spa/Cargo.toml
@@ -10,11 +10,15 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+meower_schema = { version = "0.1.0", path = "../schema" }
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 log = "0.4.17"
 reqwest = "0.11.22"
 rust-i18n = "2.3.0"
+serde = "1.0.192"
+serde-wasm-bindgen = "0.6.3"
+serde_json = "1.0.108"
 sycamore = { version = "0.8.2", features = ["suspense"] }
 sycamore-router = "0.8.0"
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
