--- a/dev/.env.example
+++ b/dev/.env.example
@@ -11,7 +11,9 @@ API_AUTH_LAYER_PORT=9001
 
 # SPA
 SPA_PORT=9100
-SPA_URL=http://spa:${SPA_PORT}
+
+# API
+API_PORT=9200
 
 # Postgres
 POSTGRES_PORT=5432
@@ -28,9 +30,6 @@ DATABASE_URL=postgres://meower:meower@postgres/meower?sslmode=disable
 # Debug mode
 DEBUG_MODE=true
 
-# System URL
-SYSTEM_URL=http://localhost:${BALANCER_PORT}
-
 # JWT
 JWT_ISSUE=meower
 JWT_AUDIENCE=meower
@@ -44,6 +43,17 @@ SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_USER=meower
 SMTP_PASSWORD=meower
+
+
+################################################################################
+# URLs
+################################################################################
+
+# System URL
+SYSTEM_URL=http://localhost:${BALANCER_PORT}
+PROXY_SPA_URL=http://spa:${SPA_PORT}
+PROXY_API_URL=http://api:${API_PORT}
+API_URL=${SYSTEM_URL}/api
 
 
 ################################################################################
