--- a/dev/docker/system/balancer/nginx.conf
+++ b/dev/docker/system/balancer/nginx.conf
@@ -6,15 +6,24 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	upstream auth.local {
+	upstream default.local {
 		server spa_auth_layer:9000;
 	}
+
+	upstream api.local {
+		server api_auth_layer:9001;
+	}
+
 
 	server {
 		listen 8080;
 
 		location / {
-			proxy_pass http://auth.local;
+			proxy_pass http://default.local;
+		}
+
+		location /api {
+			proxy_pass http://api.local;
 		}
 	}
 }
