--- a/dev/system/service/api/Cargo.toml
+++ b/dev/system/service/api/Cargo.toml
@@ -10,3 +10,16 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+meower_schema = { version = "0.1.0", path = "../schema" }
+meower_entity = { version = "0.1.0", path = "../../database/entity" }
+meower_type = { version = "0.1.0", path = "../../util/type" }
+accept-language = "3.1.0"
+axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["cookie"] }
+jsonwebtoken = "9.1.0"
+rust-i18n = "2.3.0"
+sea-orm = { version = "0.12.6", features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres"
+]}
+tokio = { version = "1.34.0", features = ["full"] }
