--- a/dev/system/layer/auth/Cargo.toml
+++ b/dev/system/layer/auth/Cargo.toml
@@ -35,3 +35,4 @@ serde = "1.0.192"
 serde_json = "1.0.108"
 time = "0.3.31"
 tokio = { version = "1.34.0", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["fs"] }
