--- a/dev/.env.example
+++ b/dev/.env.example
@@ -68,3 +68,6 @@ MAILHOG_SMTP_PORT=1025
 TBLS_OUTPUT_PATH=../spec
 TBLS_DSN=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
 TBLS_DOC_PATH=databasedesign
+
+# UI catalog
+UI_CATALOG_PORT=8030
