--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -174,6 +174,7 @@ services:
       dockerfile: ./docker/base/dev/Dockerfile
     volumes:
       - ./system:/system
+      - ./proto:/proto
     environment:
       DATABASE_URL: ${DATABASE_URL}
     tty: true
@@ -203,6 +204,19 @@ services:
       TBLS_DOC_PATH: /work/${TBLS_DOC_PATH}
     depends_on:
       - postgres
+    tty: true
+
+  # UI catalog
+  ui:
+    container_name: meower_ui
+    build:
+      context: .
+      dockerfile: ./docker/base/ui/Dockerfile
+    ports:
+      - ${UI_CATALOG_PORT}:8030
+    volumes:
+      - ./proto/ui_catalog:/proto/ui_catalog
+    working_dir: /proto/ui_catalog
     tty: true
 
 
