--- a/dev/docker/system/balancer/nginx.conf
+++ b/dev/docker/system/balancer/nginx.conf
@@ -6,20 +6,29 @@ http {
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	upstream default.local {
-		server spa_auth_layer:9000;
+	upstream auth_server.local {
+		server auth_server:80;
+	}
+
+	upstream spa.local {
+		server spa:80;
 	}
 
 	upstream api.local {
-		server api_auth_layer:9001;
+		server api:80;
 	}
 
 
 	server {
 		listen 8080;
 
+		location /auth {
+			rewrite ^/auth/(.*)$ /$1 break;
+			proxy_pass http://auth_server.local;
+		}
+
 		location / {
-			proxy_pass http://default.local;
+			proxy_pass http://spa.local;
 		}
 
 		location /api {
