--- a/dev/.env.example
+++ b/dev/.env.example
@@ -5,15 +5,14 @@
 # Load balancer
 BALANCER_PORT=8080
 
-# Auth layer
-SPA_AUTH_LAYER_PORT=9000
-API_AUTH_LAYER_PORT=9001
+# Auth Server
+AUTH_SERVER_PORT=80
 
 # SPA
-SPA_PORT=9100
+SPA_PORT=80
 
 # API
-API_PORT=9200
+API_PORT=80
 
 # Postgres
 POSTGRES_PORT=5432
@@ -52,8 +51,8 @@ SMTP_PASSWORD=meower
 
 # System URL
 SYSTEM_URL=http://localhost:${BALANCER_PORT}
-PROXY_SPA_URL=http://spa:${SPA_PORT}
-PROXY_API_URL=http://api:${API_PORT}
+AUTH_SERVER_URL=${SYSTEM_URL}/auth
+SPA_URL=${SYSTEM_URL}/
 API_URL=${SYSTEM_URL}/api
 
 
