--- a/dev/docker/system/balancer/nginx.conf
+++ b/dev/docker/system/balancer/nginx.conf
@@ -10,8 +10,8 @@ http {
 		server auth_server:80;
 	}
 
-	upstream spa.local {
-		server spa:80;
+	upstream spa_server.local {
+		server spa_server:80;
 	}
 
 	upstream api.local {
@@ -28,7 +28,7 @@ http {
 		}
 
 		location / {
-			proxy_pass http://spa.local;
+			proxy_pass http://spa_server.local;
 		}
 
 		location /api {
