--- a/dev/.env.example
+++ b/dev/.env.example
@@ -9,7 +9,7 @@ BALANCER_PORT=8080
 AUTH_SERVER_PORT=80
 
 # SPA
-SPA_PORT=80
+SPA_SERVER_PORT=80
 
 # API
 API_PORT=80
@@ -32,7 +32,7 @@ DEBUG_MODE=true
 # JWT
 JWT_ISSUE=meower
 JWT_AUDIENCE=meower
-JWT_EXPIRATION_MINUTES=1
+JWT_EXPIRATION_MINUTES=30
 JWT_SECRET=secret
 JWT_REFRESH_TOKEN_EXPIRATION_MINUTES=1440
 
