--- a/dev/system/service/spa_server/Cargo.toml
+++ b/dev/system/service/spa_server/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+meower_layer = { version = "0.1.0", path = "../../util/layer" }
+meower_type = { version = "0.1.0", path = "../../util/type" }
 axum = "0.7.2"
 axum-extra = { version = "0.9.0", features = ["cookie"] }
 jsonwebtoken = "9.1.0"
