--- a/dev/system/util/layer/Cargo.toml
+++ b/dev/system/util/layer/Cargo.toml
@@ -10,4 +10,10 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
-serde = "1.0.193"
+meower_type = { path = "../type" }
+axum = "0.7.2"
+axum-extra = { version = "0.9.0", features = ["cookie"] }
+jsonwebtoken = "9.1.0"
+http = "1.0.0"
+tower = "0.4.13"
+tower-layer = "0.3.2"
