--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -75,6 +75,7 @@ services:
       PORT: ${SPA_SERVER_PORT}
       JWT_AUDIENCE: ${JWT_AUDIENCE}
       JWT_SECRET: ${JWT_SECRET}
+      AUTH_SERVER_URL: ${AUTH_SERVER_URL}
     working_dir: /system/service/spa_server
     command: "cargo watch -x run"
     tty: true
@@ -120,6 +121,7 @@ services:
       SMTP_PORT: ${SMTP_PORT}
       SMTP_USER: ${SMTP_USER}
       SMTP_PASSWORD: ${SMTP_PASSWORD}
+      AUTH_SERVER_URL: ${AUTH_SERVER_URL}
     working_dir: /system/service/api
     command: "cargo watch -x run"
     tty: true
