feat: Add callback handler for authorization code

--- a/dev/system/service/spa_server/Cargo.toml
+++ b/dev/system/service/spa_server/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+meower_handler = { version = "0.1.0", path = "../../util/handler" }
 meower_layer = { version = "0.1.0", path = "../../util/layer" }
 meower_type = { version = "0.1.0", path = "../../util/type" }
 axum = "0.7.2"
