feat: Add common route

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -51,6 +51,7 @@ SMTP_PASSWORD=meower
 
 # System URL
 SYSTEM_URL=http://localhost:${BALANCER_PORT}
+SYSTEM_URL_CONTAINER=http://balancer:${BALANCER_PORT}
 AUTH_SERVER_URL=${SYSTEM_URL}/auth
 SPA_URL=${SYSTEM_URL}/
 API_URL=${SYSTEM_URL}/api
