--- a/dev/system/util/layer/Cargo.toml
+++ b/dev/system/util/layer/Cargo.toml
@@ -13,8 +13,11 @@ repository = "https://github.com/ichigo-dev/meower"
 meower_type = { path = "../type" }
 axum = "0.7.2"
 axum-extra = { version = "0.9.0", features = ["cookie"] }
+futures-util = "0.3.30"
 jsonwebtoken = "9.1.0"
+hyper = "1.1.0"
+hyper-util = { version = "0.1.2", features = ["client-legacy"] }
 http = "1.0.0"
+serde = "1.0.195"
 tower = "0.4.13"
 tower-layer = "0.3.2"
-futures-util = "0.3.30"
