--- a/dev2/system/auth/migration/Cargo.toml
+++ b/dev2/system/auth/migration/Cargo.toml
@@ -7,3 +7,15 @@ description = "Meower authentication server data migration"
 license = "MIT"
 documentation = ""
 repository = "https://github.com/ichigo-dev/meower"
+
+
+[dependencies]
+tokio = { version = "1.34.0", features = ["full"] }
+sea-orm-migration = { version = "0.12.6", features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres"
+]}
+sea-orm = { version = "0.12.6", features = [
+    "runtime-tokio-rustls",
+    "sqlx-postgres"
+]}
