--- a/dev2/.env.example
+++ b/dev2/.env.example
@@ -8,7 +8,7 @@ AUTH_DB_PORT=5432
 AUTH_DB_NAME=meower_auth
 AUTH_DB_USER=meower_auth
 AUTH_DB_PASSWORD=meower_auth
-AUTH_DB_URL=postgres://${AUTH_DB_USER}:${AUTH_DB_PASSWORD}@postgres:${AUTH_DB_PORT}/${AUTH_DB_NAME}?sslmode=disable
+AUTH_DB_URL=postgres://${AUTH_DB_USER}:${AUTH_DB_PASSWORD}@auth_db:${AUTH_DB_PORT}/${AUTH_DB_NAME}?sslmode=disable
 
 
 ################################################################################
