feat: Implement user entity

--- a/dev2/system/auth/entity/Cargo.toml
+++ b/dev2/system/auth/entity/Cargo.toml
@@ -11,8 +11,10 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
+meower_utility = { version = "0.1.0", path = "../../common/utility" }
 meower_validator = { version = "0.1.0", path = "../../common/validator" }
 async-trait = "0.1.74"
+chrono = "0.4.31"
 sea-orm = "0.12.6"
 sea-query = "0.30.3"
 rust-i18n = "2.3.0"
