--- a/dev2/system/auth/core/Cargo.toml
+++ b/dev2/system/auth/core/Cargo.toml
@@ -7,3 +7,8 @@ description = "Meower authentication server"
 license = "MIT"
 documentation = ""
 repository = "https://github.com/ichigo-dev/meower"
+
+
+[dependencies]
+meower_auth_entity = { version = "0.1.0", path = "../entity" }
+meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
