feat: Add login page and installer

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -12,6 +12,13 @@ AUTH_DB_URL=postgres://${AUTH_DB_USER}:${AUTH_DB_PASSWORD}@auth_db:${AUTH_DB_POR
 
 
 ################################################################################
+# Application settings
+################################################################################
+
+FALLBACK_LOCALE=ja
+
+
+################################################################################
 # Development tools
 ################################################################################
 
