feat: Add a layer to protect access by non-client

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -19,6 +19,14 @@ FALLBACK_LOCALE=ja
 
 
 ################################################################################
+# Oauth settings
+################################################################################
+
+CLIENT_ID_KEY=X-Client-Id
+CLIENT_SECRET_KEY=X-Client-Secret
+
+
+################################################################################
 # Development tools
 ################################################################################
 
